<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Reaction Game</string>
    <string name="app_logo">Application logo</string>
    <string name="app_subtitle">Reaction Test</string>

    <!-- Settings screen -->
    <string name="settings_title">Game Settings</string>
    <string name="grid_size">Grid Size</string>
    <string name="timer">Timer</string>
    <string name="speed">Frame Change Speed</string>
    <string name="start_game">Start</string>

    <!-- Game screen -->
    <string name="game_title">Reaction Game</string>
    <string name="time_label">Time:</string>
    <string name="score_label">Score:</string>
    <string name="finish_game">Finish</string>

    <!-- Result dialog -->
    <string name="game_over">Game Over</string>
    <string name="your_score">Your score: %1$d</string>
    <string name="ok">OK</string>

    <!-- Spinner values -->
    <string-array name="grid_sizes">
        <item>3x3</item>
        <item>4x4</item>
        <item>5x5</item>
    </string-array>

    <string-array name="timer_values">
        <item>15 sec</item>
        <item>30 sec</item>
        <item>45 sec</item>
    </string-array>

    <string-array name="speed_values">
        <item>1-1.5 sec</item>
        <item>0.7-1 sec</item>
        <item>0.5-0.7 sec</item>
        <item>0.3-0.6 sec</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>